--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = "https://ivangrod.github.io/se-journey"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Software Engineer Journey"
+publishDir = "docs"
+theme = "learn"
